tests/requests/invalid/003.http
GET\n/\nHTTP/1.1\r\n
\r\n
